2013-03-09  Dima Kogan  <dima@secretsauce.net>

	* src/gplt_x11.c:  Some window managers produce multiple ConfigureNotify
	events when a window is created. Some of these were mis-interpreted by
	gnuplot_x11 as a refusal to resize, which then issued additional
	unneeded replot actions. Now we wait for 0.1 second for extra
	ConfigureNotify events before deciding that a resize was rejected.

2013-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  Allow a 2 columns only variant of "with yerrorbars".
	x is taken from column 0, y from column 1, yerror from column 2.

2013-03-02  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wtext.h: Avoid redefinition error for ungetch.

	* src/makefile.awc (COREOBJS): Add new module to Watcom make file
	list, too.

2013-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (refresh_bounds):  Partial axis ranges, e.g. [*:MAX] or
	[MIN:*] were not being handled correctly when refreshing volatile data.

2013-02-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (replot_command):  If the input data comes from stdin
	and is marked volatile, i.e.  plot '-' volatile,  then treat a replot
	command as if it were a refresh command.  This is a change, but is
	consistent with the documentation for the "volatile" keyword.

	* src/plot2d.c (eval_plots):  The range check on functions with a 
	private sampling range did not allow for log scaling.
	Bug #1215

2013-02-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c src/boundary.c src/boundary.h src/Makefile.am:
	graphics.c has grown into the largest single gnuplot source file
	(7000+ lines).  Split out the routines dealing with key and border
	layout into a new separate file boundary.c.

	* src/color.c src/pm3d.c src/interpol.c:
	Remove unneeded #include headers.

	* src/axis.c src/gadgets.c src/gadgets.h src/graphics.c src/graphics.h
	(label_width):  Move routine label_width() from graphics.c to gadgets.c.
