@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.288 2013/03/04 01:15:20 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.289 2013/03/10 01:12:29 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -290,6 +290,10 @@ refresh_bounds(struct curve_points *first_plot, int nplots)
 	    /* If the state has been set to autoscale since the last plot,
 	     * mark everything INRANGE and re-evaluate the axis limits now.
 	     * Otherwise test INRANGE/OUTRANGE against previous axis limits.
+	     */
+
+	    /* This autoscaling logic is identical to that in
+	     * refresh_3dbounds() in plot3d.c
 	     */
 	    if (!this_plot->noautoscale) {
 		if (x_axis->set_autoscale & AUTOSCALE_MIN && point->x < x_axis->min)
